--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
               </a>
             </li>
           </ul>
-          <a href="#" class="header__pa-button header__pa-button--hover">
-            Личный кабинет
+          <a href="index2.html" class="header__pa-button header__pa-button--hover">
+            <span class="header__pa-button-anchor">Личный кабинет</span>
             <svg width="20px" height="20px" class="header__pa-button-icon">
               <use xlink:href="images/sprite.svg#user-head"></use>
             </svg>
