--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </header>
     <section class="first-screen">
       <div class="first-screen__grid grid-carts">
-        <div class="grid-carts__cart1 first-cart">
+        <div class="first-cart">
           <h1 class="first-cart__title">
             Психологические консультации доступные каждому
           </h1>
@@ -363,7 +363,7 @@
       </div>
     </section>
     <section class="security">
-      <picture>
+  <!--     <picture>
         <source type="image/avif" srcset="images/security-bg-img.avif" />
         <source type="image/webp" srcset="images/security-bg-img.webp" />
         <img
@@ -372,7 +372,7 @@
           class="security__bg-img"
           alt=""
         />
-      </picture>
+      </picture> -->
       <div class="security__container">
         <h2 class="security__title">Все данные конфиденциальны</h2>
         <p class="security__subtitle">
@@ -383,7 +383,7 @@
       </div>
     </section>
     <section class="questions">
-      <picture>
+      <!-- <picture>
         <source type="image/avif" srcset="images/security-bg-img.avif" />
         <source type="image/webp" srcset="images/security-bg-img.webp" />
         <img
@@ -397,7 +397,7 @@
           "
           alt=""
         />
-      </picture>
+      </picture> -->
       <div class="questions__container questions__container--js">
         <h2 class="questions__title">Частно задаваемые вопросы</h2>
         <div class="questions__inner-question">
