--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
               </a>
             </li>
           </ul>
-          <a href="index2.html" class="header__pa-button header__pa-button--hover">
+          <a
+            href="index2.html"
+            class="header__pa-button header__pa-button--hover"
+          >
             <span class="header__pa-button-anchor">Личный кабинет</span>
             <svg width="20px" height="20px" class="header__pa-button-icon">
               <use xlink:href="images/sprite.svg#user-head"></use>
             </svg>
           </a>
-          <button
-            class="header__burger-button"
-            aria-label="menu-burger"
-          >
+          <button class="header__burger-button" aria-label="menu-burger">
             <span class="header__burger-arrow"></span>
           </button>
         </div>
@@ -65,8 +65,7 @@
           </h1>
           <p class="first-cart__subtitle">
             Мы ценим время наших клиентов так же высоко как и оказанное нам
-            доверие и поэтому мы предлагаем различные формы работы: 
-            1.
+            доверие и поэтому мы предлагаем различные формы работы: 1.
             Традиционные консультации в формате личных или онлайн встреч в
             Санкт- Петербурге 2. Полу-очная терапия (сочетание консультаций и
             работы над уникальными домашними заданиями, предоставляемых в личном
@@ -90,7 +89,11 @@
             <p class="cart-inner-descr__descr">
               У вас апатия? Опускаются руки? Мир стал черно-белым?
             </p>
-            <a href="#" class="cart-inner-descr__button-test cart-inner-descr__button-test--hover">Пройти тест</a>
+            <a
+              href="#"
+              class="cart-inner-descr__button-test cart-inner-descr__button-test--hover"
+              >Пройти тест</a
+            >
           </div>
         </div>
         <div class="grid-carts__cart grid-carts__cart--hover">
@@ -110,7 +113,11 @@
             <p class="cart-inner-descr__descr">
               Срываетесь на близких? Чувствуете себя потерянным и одиноким?
             </p>
-            <a href="#" class="cart-inner-descr__button-test cart-inner-descr__button-test--hover">Пройти тест</a>
+            <a
+              href="#"
+              class="cart-inner-descr__button-test cart-inner-descr__button-test--hover"
+              >Пройти тест</a
+            >
           </div>
         </div>
         <div class="grid-carts__cart grid-carts__cart--hover">
@@ -131,7 +138,11 @@
               Не можете определиться со сферой деятельности или вас не
               устраивает уже выбранная область?
             </p>
-            <a href="#" class="cart-inner-descr__button-test cart-inner-descr__button-test--hover">Пройти тест</a>
+            <a
+              href="#"
+              class="cart-inner-descr__button-test cart-inner-descr__button-test--hover"
+              >Пройти тест</a
+            >
           </div>
         </div>
         <div class="grid-carts__cart grid-carts__cart--hover">
@@ -151,7 +162,11 @@
             <p class="cart-inner-descr__descr">
               Едите и не можете остановиться?
             </p>
-            <a href="#" class="cart-inner-descr__button-test cart-inner-descr__button-test--hover">Пройти тест</a>
+            <a
+              href="#"
+              class="cart-inner-descr__button-test cart-inner-descr__button-test--hover"
+              >Пройти тест</a
+            >
           </div>
         </div>
         <div class="grid-carts__cart grid-carts__cart--hover">
@@ -172,7 +187,11 @@
               Ваш близкий человек пьет? Вы много раз пытались ему помочь, но все
               без толку?
             </p>
-            <a href="#" class="cart-inner-descr__button-test cart-inner-descr__button-test--hover">Пройти тест</a>
+            <a
+              href="#"
+              class="cart-inner-descr__button-test cart-inner-descr__button-test--hover"
+              >Пройти тест</a
+            >
           </div>
         </div>
         <div class="grid-carts__cart grid-carts__cart--hover">
@@ -193,7 +212,11 @@
               Вы столкнулись с неразрешимой проблемой? Не знаете как двигаться
               дальше?
             </p>
-            <a href="#" class="cart-inner-descr__button-test cart-inner-descr__button-test--hover">Пройти тест</a>
+            <a
+              href="#"
+              class="cart-inner-descr__button-test cart-inner-descr__button-test--hover"
+              >Пройти тест</a
+            >
           </div>
         </div>
         <div class="grid-carts__cart grid-carts__cart--hover">
@@ -213,7 +236,11 @@
             <p class="cart-inner-descr__descr">
               Не можете справиться с эмоциями? Вас накрывает?
             </p>
-            <a href="#" class="cart-inner-descr__button-test cart-inner-descr__button-test--hover">Пройти тест</a>
+            <a
+              href="#"
+              class="cart-inner-descr__button-test cart-inner-descr__button-test--hover"
+              >Пройти тест</a
+            >
           </div>
         </div>
         <div class="grid-carts__cart grid-carts__cart--hover">
@@ -233,7 +260,11 @@
             <p class="cart-inner-descr__descr">
               Не складывается личная жизнь? На ножах с коллегами?
             </p>
-            <a href="#" class="cart-inner-descr__button-test cart-inner-descr__button-test--hover">Пройти тест</a>
+            <a
+              href="#"
+              class="cart-inner-descr__button-test cart-inner-descr__button-test--hover"
+              >Пройти тест</a
+            >
           </div>
         </div>
         <div class="grid-carts__cart grid-carts__cart--hover">
@@ -253,7 +284,11 @@
             <p class="cart-inner-descr__descr">
               Страхи? Преследует тревога? Панические атаки?
             </p>
-            <a href="#" class="cart-inner-descr__button-test cart-inner-descr__button-test--hover">Пройти тест</a>
+            <a
+              href="#"
+              class="cart-inner-descr__button-test cart-inner-descr__button-test--hover"
+              >Пройти тест</a
+            >
           </div>
         </div>
         <div class="grid-carts__cart grid-carts__cart--hover">
@@ -271,12 +306,16 @@
             <p class="cart-inner-descr__descr">
               Сексуальная жизнь не удовлетворительна?
             </p>
-            <a href="#" class="cart-inner-descr__button-test cart-inner-descr__button-test--hover">Пройти тест</a>
+            <a
+              href="#"
+              class="cart-inner-descr__button-test cart-inner-descr__button-test--hover"
+              >Пройти тест</a
+            >
           </div>
         </div>
       </div>
     </section>
-    <section class="advantge">
+    <section class="advantge" height>
       <h1 class="advantge__title">Преимущества платной подписки</h1>
       <div class="advantge__layout-grid carts-desc">
         <div class="carts-desc__cart">
@@ -363,7 +402,10 @@
       </div>
     </section>
     <section class="security">
-  <!--     <picture>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 80" class="security__bg-separator">
+        <path fill="#F3F3F3" d="M1920,0L1920,0L0,80V0H1920z"/>
+      </svg>
+     <!--  <picture>
         <source type="image/avif" srcset="images/security-bg-img.avif" />
         <source type="image/webp" srcset="images/security-bg-img.webp" />
         <img
@@ -379,8 +421,13 @@
           Иформация зашифрована в системе, которую не сможет открыть никто без
           Вашего разрешения.
         </p>
-        <a href="#" class="security__button">Зарегистрироваться</a>
+        <a href="#" class="security__button security__button--hover"
+          >Зарегистрироваться</a
+        >
       </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 80" class="security__bg-separator">
+        <path fill="#F3F3F3" d="M0,80L0,80L1920,0v80H0z"/>
+      </svg>
     </section>
     <section class="questions">
       <!-- <picture>
