--- a/index.html
+++ b/index.html
@@ -402,10 +402,10 @@
       </div>
     </section>
     <section class="security">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 80" class="security__bg-separator">
-        <path fill="#F3F3F3" d="M1920,0L1920,0L0,80V0H1920z"/>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 55">
+        <path fill="#F3F3F3" d="M1920,0L1920,0L0,55V0H1920z" />
       </svg>
-     <!--  <picture>
+      <!--  <picture>
         <source type="image/avif" srcset="images/security-bg-img.avif" />
         <source type="image/webp" srcset="images/security-bg-img.webp" />
         <img
@@ -425,8 +425,8 @@
           >Зарегистрироваться</a
         >
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 80" class="security__bg-separator">
-        <path fill="#F3F3F3" d="M0,80L0,80L1920,0v80H0z"/>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 55">
+        <path fill="#F3F3F3" d="M0,55L0,55L1920,0v55H0z" />
       </svg>
     </section>
     <section class="questions">
